[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/voice_chat/VoiceChatTransceiver.gd" type="Script" id=1]
[ext_resource path="res://common/voice_chat/VoiceChatReceiver.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/opus/OpusEncoderNode.gdns" type="Script" id=3]
[ext_resource path="res://common/voice_chat/transmit_limit.ogg" type="AudioStream" id=4]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="VoiceChat" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="." index="1"]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="OpusEncoder" type="Node" parent="." index="3"]
script = ExtResource( 3 )

[node name="TransmitLimitTimer" type="Timer" parent="." index="4"]
wait_time = 10.0
one_shot = true

[node name="TransmitLimitAudio" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 4 )
[connection signal="timeout" from="TransmitLimitTimer" to="." method="_on_TransmitLimitTimer_timeout"]
